--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "meteor-node-stubs": "^0.3.2",
     "moment": "^2.21.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
