--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
